--- a/Lamar - Balentine - Model.ipynb
+++ b/Lamar - Balentine - Model.ipynb
@@ -184,7 +184,16 @@
     "    if value == 'Russell 1000 Growth':\n",
     "        return 'Growth Weighted'\n",
     "    if value == 'Russell 1000 Value':\n",
-    "        return 'Value Weighted'"
+    "        return 'Value Weighted'\n",
+    "    \n",
+    "#Assign Buy / Sell directions\n",
+    "def advtradeflag(value):\n",
+    "    if value > 0: \n",
+    "        return(f'Buy: {round(value*100,4)}%')\n",
+    "    if value < 0: \n",
+    "        return(f'Sell: {round(value*100,4)}%')\n",
+    "    if value == 0: \n",
+    "        return(f'Do Not Trade')"
    ]
   },
   {
@@ -2274,6 +2283,77 @@
     "    indicator_leading_results['Selection Portfolio Value'].iloc[i+1] = (indicator_leading_results['Selection Return'].apply(percentagecompound).iloc[i+1] * indicator_leading_results['Selection Portfolio Value'].iloc[i])\n",
     "\n",
     "indicator_leading_results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caa7eb44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Generates results table and calculates value of $100\n",
+    "\n",
+    "indicator_leading_trade_view = indicator_leading[['Russell 1000 Core','Russell 1000 Value','Russell 1000 Growth','Selection Return','Favored','Trade/Hold']].copy()\n",
+    "indicator_leading_trade_view.loc[indicator_leading_trade_view.index[0], 'Core Portfolio Value'] = 100\n",
+    "indicator_leading_trade_view.loc[indicator_leading_trade_view.index[0], 'Selection Portfolio Value'] = 100\n",
+    "indicator_leading_trade_view.loc[datetime.datetime.strptime('1978-12-31', '%Y-%m-%d').date()] = [0,0, 0,0,'Value Weighted','X',100,100]  # adding a row\n",
+    "indicator_leading_trade_view = indicator_leading_trade_view.sort_index()\n",
+    "for i in range(indicator_leading_trade_view.index.size - 1):\n",
+    "    indicator_leading_trade_view['Core Portfolio Value'].iloc[i+1] = (indicator_leading_trade_view['Russell 1000 Core'].apply(percentagecompound).iloc[i+1] * indicator_leading_trade_view['Core Portfolio Value'].iloc[i])\n",
+    "    indicator_leading_trade_view['Selection Portfolio Value'].iloc[i+1] = (indicator_leading_trade_view['Selection Return'].apply(percentagecompound).iloc[i+1] * indicator_leading_trade_view['Selection Portfolio Value'].iloc[i])\n",
+    "\n",
+    "# Calculates the beginning index weights of portfolio based on \n",
+    "indicator_leading_trade_view.loc[indicator_leading_trade_view['Favored'] == 'Value Weighted' , \"Beginning Value Allocation\"] =  indicator_leading_trade_view['Selection Portfolio Value'].shift() * .97\n",
+    "indicator_leading_trade_view.loc[indicator_leading_trade_view['Favored'] == 'Value Weighted' , \"Beginning Core Allocation\"] =  indicator_leading_trade_view['Selection Portfolio Value'].shift() * .02\n",
+    "indicator_leading_trade_view.loc[indicator_leading_trade_view['Favored'] == 'Value Weighted' , \"Beginning Growth Allocation\"] =  indicator_leading_trade_view['Selection Portfolio Value'].shift() * .01\n",
+    "indicator_leading_trade_view.loc[indicator_leading_trade_view['Favored'] == 'Growth Weighted' , \"Beginning Value Allocation\"] =  indicator_leading_trade_view['Selection Portfolio Value'].shift() * .7\n",
+    "indicator_leading_trade_view.loc[indicator_leading_trade_view['Favored'] == 'Growth Weighted' , \"Beginning Core Allocation\"] =  indicator_leading_trade_view['Selection Portfolio Value'].shift() * .1\n",
+    "indicator_leading_trade_view.loc[indicator_leading_trade_view['Favored'] == 'Growth Weighted' , \"Beginning Growth Allocation\"] =  indicator_leading_trade_view['Selection Portfolio Value'].shift() * .2\n",
+    "\n",
+    "#Calculate ending portfolio allocations, by multiplying weights against ending portfolio value for the month\n",
+    "\n",
+    "indicator_leading_trade_view['Ending Value Allocation'] = indicator_leading_trade_view['Beginning Value Allocation'] * (indicator_leading_trade_view['Russell 1000 Value'].apply(percentagecompound))\n",
+    "indicator_leading_trade_view['Ending Core Allocation'] = indicator_leading_trade_view['Beginning Core Allocation'] * (indicator_leading_trade_view['Russell 1000 Core'].apply(percentagecompound))\n",
+    "indicator_leading_trade_view['Ending Growth Allocation'] = indicator_leading_trade_view['Beginning Growth Allocation'] * (indicator_leading_trade_view['Russell 1000 Growth'].apply(percentagecompound))\n",
+    "\n",
+    "#Calculates beginning percent by dividing Beginning Value Allocation and last months selection portfolio value - Should always equal weightings of the created portfolios. \n",
+    "\n",
+    "indicator_leading_trade_view['Beginning Value Percent'] = indicator_leading_trade_view['Beginning Value Allocation'] / indicator_leading_trade_view['Selection Portfolio Value'].shift()\n",
+    "indicator_leading_trade_view['Beginning Core Percent'] = indicator_leading_trade_view['Beginning Core Allocation'] / indicator_leading_trade_view['Selection Portfolio Value'].shift()\n",
+    "indicator_leading_trade_view['Beginning Growth Percent'] = indicator_leading_trade_view['Beginning Growth Allocation'] / indicator_leading_trade_view['Selection Portfolio Value'].shift()\n",
+    "\n",
+    "#Determines ending value percentages by dividing end allocation and the selection portfolio value\n",
+    "\n",
+    "indicator_leading_trade_view['Ending Value Percent'] = (indicator_leading_trade_view['Ending Value Allocation'] / indicator_leading_trade_view['Selection Portfolio Value']).round(4)\n",
+    "indicator_leading_trade_view['Ending Core Percent'] = (indicator_leading_trade_view['Ending Core Allocation'] / indicator_leading_trade_view['Selection Portfolio Value']).round(4)\n",
+    "indicator_leading_trade_view['Ending Growth Percent'] = (indicator_leading_trade_view['Ending Growth Allocation'] / indicator_leading_trade_view['Selection Portfolio Value']).round(4)\n",
+    "\n",
+    "# Determines trade size and value in pct. \n",
+    "\n",
+    "indicator_leading_trade_view['Value Trade'] = (indicator_leading_trade_view['Beginning Value Percent'] - indicator_leading_trade_view['Ending Value Percent'].shift()).round(4)\n",
+    "indicator_leading_trade_view['Core Trade'] = (indicator_leading_trade_view['Beginning Core Percent'] - indicator_leading_trade_view['Ending Core Percent'].shift()).round(4)\n",
+    "indicator_leading_trade_view['Growth Trade'] = (indicator_leading_trade_view['Beginning Growth Percent'] - indicator_leading_trade_view['Ending Growth Percent'].shift()).round(4)\n",
+    "indicator_leading_trade_view = indicator_leading_trade_view.replace(np.nan,0)\n",
+    "\n",
+    "# Updates Trade columns to directional strings. \n",
+    "\n",
+    "indicator_leading_trade_view['Value Trade'] = indicator_leading_trade_view['Value Trade'].apply(advtradeflag)\n",
+    "indicator_leading_trade_view['Core Trade'] = indicator_leading_trade_view['Core Trade'].apply(advtradeflag)\n",
+    "indicator_leading_trade_view['Growth Trade'] = indicator_leading_trade_view['Growth Trade'].apply(advtradeflag)\n",
+    "\n",
+    "pd.set_option('display.max_rows',20)\n",
+    "pd.set_option('display.max_columns',20)\n",
+    "\n",
+    "#indicator_leading_results = indicator_leading_results['']\n",
+    "\n",
+    "indicator_leading_trade_view.loc[((indicator_leading_trade_view['Value Trade'] == 'Do Not Trade') & (indicator_leading_trade_view['Core Trade'] == 'Do Not Trade') & (indicator_leading_trade_view['Growth Trade'] == 'Do Not Trade')), 'NewTradeFlag'] = 'X'\n",
+    "#indicator_leading_trade_view[1:]\n",
+    "#indicator_leading_trade_view = indicator_leading_trade_view.loc[indicator_leading_trade_view['Trade/Hold'] == 'Trade']\n",
+    "indicator_leading_trade_view['NewTradeFlag'] = indicator_leading_trade_view['NewTradeFlag'].replace(np.nan,'Trade')\n",
+    "indicator_leading_trade_view = indicator_leading_trade_view[['Favored','Trade/Hold','NewTradeFlag','Beginning Value Percent','Beginning Core Percent','Beginning Growth Percent','Ending Value Percent','Ending Core Percent','Ending Growth Percent','Value Trade','Core Trade','Growth Trade']][1:]\n",
+    "indicator_leading_trade_view = indicator_leading_trade_view.loc[(indicator_leading_trade_view['Trade/Hold'] == 'Trade') & (indicator_leading_trade_view['NewTradeFlag'] == 'Trade')].drop(columns = 'NewTradeFlag')\n",
+    "indicator_leading_trade_view\n"
    ]
   },
   {
